<resources>
    <string name="app_name">SIGAA Mobile</string>
    <string name="sigla_app">SIGAA</string>
    <string name="type_app">Mobile</string>

    <!--  Tela de Login  -->
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="hint_usuario">Digite seu usuário</string>
    <string name="hint_senha">Digite sua senha</string>
    <string name="entrar">Entrar</string>

    <!--  Informações Gerais do Usuário  -->
    <string name="nomeAluno">Fulano Ciclano de Beltrano</string>
    <string name="matricula">Matrícula:</string>
    <string name="mat_number">20195523654</string>
    <string name="curso">Curso:</string>
    <string name="nivel">Nível:</string>
    <string name="status">Status:</string>
    <string name="email">E-mail:</string>
    <string name="entrada">Entrada:</string>
    <string name="cr_sigla">CR</string>
    <string name="mc_sigla">MC</string>
    <string name="mcn_sigla">MCN</string>
    <string name="ch_obrigatoria">CH Obrigatória Pendente:</string>
    <string name="ch_optativa">CH Optativa Pendente:</string>
    <string name="ch_total">CH Total Currículo:</string>
    <string name="ch_complementar">CH Complementar Pendente:</string>
    <string name="btn_deslogar">Sair</string>

    <!--  Telas  -->
    <string name="notas">Ver Notas</string>
    <string name="frequencia">Frequência</string>
    <string name="atividades">Atividades</string>
    <string name="documentos">Documentos</string>
    <string name="resposta_atividade">Ver Resposta</string>
    <string name="detalhes_atividades">Detalhes da Atividade</string>

    <!--  Tela Ver Notas  -->
    <string name="und1">UND 1</string>
    <string name="und2">UND 2</string>
    <string name="und3">UND 3</string>
    <string name="rep">REP</string>
    <string name="res">RES</string>

    <!--  Tela Documentos  -->
    <string name="doc_historico">Histórico Escolar</string>
    <string name="desc_doc_historico">Emita seu histórico acadêmico contendo as notas de todas as disciplinas que cursou.</string>
    <string name="doc_declaracao">Declaração de Vínculo</string>
    <string name="desc_doc_declaracao">Emita a declaração de vínculo para devidos fins, inclusive meia entrada em cinemas e eventos.</string>
    <string name="doc_matricula">Atestado de Matrícula</string>
    <string name="desc_doc_matricula">Emita o atestado de matrícula contendo as disciplinas em que você está matriculado.</string>

    <!--  Tela Frequência  -->
    <string name="data_aula">Data</string>
    <string name="situacao_frequencia">Situação</string>
    <string name="frequencia_aluno">Frequência:</string>
    <string name="aulas_ministradas">Aulas Ministradas:</string>

    <!--  Tela Ver Resposta da Atividade  -->
    <string name="title_resposta">Resposta Enviada</string>
    <string name="comentario_reposta">Comentários:</string>
    <string name="correcao">Correção</string>
    <string name="btn_baixar_respota">Baixar resposta enviada</string>
    <string name="btn_baixar_correcao">Baixar anexo da correção</string>

    <!--  Tela Detalhes Atividade  -->
    <string name="enviar_resposta">Enviar Resposta</string>
    <string name="selecionar_arquivo">Selecionar arquivo…</string>
    <string name="comentario_enviar_resposta">Comentários:</string>
    <string name="digite_comentario">Digite seu comentário aqui…</string>
    <string name="btn_enviar_resposta">Enviar resposta anexada</string>
    <string name="anexo_professor">Baixar anexo enviado pelo professor</string>

    <!--  Descrições  -->
    <string name="sigaa_logo">Logo do SIGAA</string>
    <string name="desc_btn_voltar">Botão de Voltar</string>
    <string name="desc_btn_main_menu">Botão do Menu Lateral</string>
    <string name="desc_btn_sair">Botão de Sair do Aplicativo</string>
    <string name="account_logo">Logo de Conta de Usuário</string>
    <string name="account_logo_bg">Cor do fundo do logo de conta de usuário</string>
    <string name="arrow_down">Icon Chevron Down</string>
    <string name="btn_help">Botão de ajuda</string>
    <string name="icone_calendario">Icone de calendário</string>
    <string name="icone_checked">Ícone de confirmado</string>
    <string name="icone_aguardando">Ícone de aguardando entrega</string>
    <string name="icone_nao_entregue">Ícone de não entregue</string>
    <string name="seta_direita">Seta para a direita</string>
    <string name="ver_senha">Botão para ver a senha</string>
    <string name="icone_notas">Ícone botão de notas</string>
    <string name="icone_frequencia">Ícone botão de frequencia</string>
    <string name="icone_atividades">Ícone botão de atividades</string>
    <string name="icone_documentos">Ícone do botão de documentos</string>

    <!--  Texto pra Teste  -->
    <string name="teste">Texto de Teste</string>
    <string name="teste_plus">Texto de Teste Comprido</string>
    <string name="teste_plus_plus">Texto de Teste Comprido Por Demais</string>
    <string name="teste_numero">8,0171</string>
    <string name="teste_nota">8,5</string>
    <string name="teste_porcentagem">82%</string>
    <string name="teste_data">12/05/2022</string>
    <string name="app_version">V1.0.0</string>

    <!--  Legenda Notas  -->
    <string name="legenda_nota_title">Legenda das Notas</string>
    <string name="un1">UND 1:</string>
    <string name="un1_desc">Unidade 1</string>
    <string name="un2">UND 2:</string>
    <string name="un2_desc">Unidade 2</string>
    <string name="un3">UND 3:</string>
    <string name="un3_desc">Unidade 3</string>
    <string name="rep_leg">REP:</string>
    <string name="rep_desc">Reposição</string>
    <string name="res_leg">RES:</string>
    <string name="res_desc">Resultado Final</string>

    <!--  Alertas  -->
    <string name="invalid_login_alert">Usuário ou senha inválidos!</string>
    <string name="alerta_deslogar">Você está prestes a sair do SIGAA Mobile, deseja continuar?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="fechar">Fechar</string>
    <string name="ok_alert">OK</string>
    <string name="voltar_alert">Voltar</string>
    <string name="atencao">Atenção!</string>
    <string name="atividades_sem_cadastro">Não foram cadastradas atividades para esta disciplina!</string>
    <string name="atividade_expirada">Esta atividade não está disponível.</string>
    <string name="documento_nao_anexado">Por favor, selecione um documento para enviar.</string>
    <string name="atividade_enviada">Sua resposta foi enviada com sucesso!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>