<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.LoginFragment"
    android:padding="20dp">

    <ImageView
        android:id="@+id/sigaa_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/relavite_app_title"
        android:src="@mipmap/sigaa_logo_white"
        app:tint="?colorSecondary" />

<!--    <ImageView-->
<!--        android:id="@+id/sigaa_logo"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/relavite_app_title"-->
<!--        android:src="@mipmap/sigaa_logo_rounded"/>-->

    <RelativeLayout
        android:id="@+id/relavite_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sigaa_logo"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/sigaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sigla_app"
            android:layout_marginEnd="2dp"
            android:textAlignment="textEnd"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_app"
            android:layout_marginStart="2dp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_toEndOf="@+id/sigaa"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toBottomOf="@+id/relavite_app_title"
        app:layout_constraintEnd_toEndOf="@+id/relavite_app_title"/>



    <TextView
        android:id="@+id/title_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/usuario"/>

    <EditText
        android:id="@+id/edit_text_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_usuario"
        app:layout_constraintTop_toBottomOf="@+id/title_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_bg"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:minHeight="45dp"/>

    <TextView
        android:id="@+id/title_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_usuario"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/senha"/>

    <EditText
        android:id="@+id/edit_text_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_senha"
        app:layout_constraintTop_toBottomOf="@+id/title_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_bg"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        android:minHeight="45dp"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:typeface="normal"
        android:layout_marginTop="60dp"
        android:minHeight="45dp"
        android:textSize="18sp"
        android:textColor="?colorOnPrimary"
        android:background="@drawable/btn_bg"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>