<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashViewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="60dp">

        <ImageView
            android:id="@+id/sigaa_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/relavite_app_title"
            android:src="@mipmap/sigaa_logo_white"
            app:tint="?colorSecondary"
            android:contentDescription="@string/sigaa_logo" />

        <RelativeLayout
            android:id="@+id/relavite_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sigaa_logo"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sigaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigla_app"
                android:layout_marginEnd="2dp"
                android:textAlignment="textEnd"
                android:textColor="?colorAccent"
                android:textStyle="bold"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_app"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_toEndOf="@+id/sigaa"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:layout_marginStart="2dp"
            app:layout_constraintTop_toBottomOf="@+id/relavite_app_title"
            app:layout_constraintEnd_toEndOf="@+id/relavite_app_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>